<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:textIsSelectable="true"
    tools:context="duviwin.compudocapp.opdracht_details.ShowDetailsActivityFragment"
    tools:showIn="@layout/activity_show_details">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/det_gepost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detailBG"
                android:text="@string/loading"/>

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/det_OS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@color/detailBG" />

                <TextView
                    android:id="@+id/det_cat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/det_omschrijving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detailBG"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textIsSelectable="true" />

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afspraaktijd"

                    />

                <TextView
                    android:id="@+id/det_afspraaktijd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internetverbinding"

                    />

                <TextView
                    android:id="@+id/det_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voorkeurstechnieker"

                    />

                <TextView
                    android:id="@+id/det_voorkeur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leadOwner"

                    />

                <TextView
                    android:id="@+id/det_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:background="@color/detailBG"
                android:gravity="center"
                android:onClick="openMaps"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="#32000000"
                    android:src="@android:drawable/ic_dialog_map" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/det_straat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <TextView
                            android:id="@+id/det_postcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" " />

                        <TextView
                            android:id="@+id/det_stad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="1"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Klantnr. " />

                <TextView
                    android:id="@+id/det_klantnr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detailBG" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/enkel_voor_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
